# memu-engine-for-OpenClaw

./: .gitignore  .npmignore  MEMU_PARAMETERS.md  PUBLISH_GUIDE.md  README.md  README_ZH.md  RELEASE_NOTES_v0.2.6.md  TODO.md  TODO_PROACTIVITY.md  TODO_SKILL_GENERATION.md  index.ts  openclaw.d.ts  openclaw.plugin.json  package.json  test_agentname_display.py  tsconfig.json  update_from_upstream.sh  verify_agentname.py  vitest.config.ts
python/: UPSTREAM.md  auto_sync.py  convert_sessions.py  docs_ingest.py  pyproject.toml  pytest.ini  test_deleted_processing.py  test_search_logic.py  test_sync_batch_backoff.py  test_topic_and_since_ts_regressions.py  test_xml_response_normalization.py  watch_sync.py
python/scripts/: get.py  migrate_agent_id.py  migrate_storage_layout.py  search.py
python/src/memu/: config_validator.py  migration.py  scope_model.py  storage_layout.py
python/tests/: COVERAGE_GAPS.md  conftest.py  shared_user_model.py  test_acceptance.py  test_access_control.py  test_agent_policies.py  test_backward_compat_agentname.py  test_backward_compat_warnings.py  test_default_search_behavior.py  test_deleted_processing.py  test_e2e_hybrid.py  test_ingest_pipeline.py  test_migration_hybrid.py  test_multi_agent_scenarios.py  test_negative_cases.py  test_perf_hybrid.py  test_shared_docs_independence.py
python/tests/fixtures/: README.md  corrupted_schema.sql  empty_db.sql  generate_multi_agent_fixtures.py  generate_synthetic_fixtures.py  generate_v026_db.sh  large_db.sql  multi_agent.sql  single_agent.sql
python/tests/integration/: test_watcher_multi_agent.py
(+54 files in other folders)
