[project]
name = "memu-py"
version = "1.4.0"
authors = [
    {name = "MemU Team", email = "contact@nevamind.ai"},
]
description = "AI Memory and Conversation Management Framework - Simple as mem0, Powerful as MemU"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1",
    "httpx>=0.28.1",
    "numpy>=2.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "pendulum>=3.0.0",
    "langchain-core>=0.1.0",
    "watchdog>=4.0.0",
    "lazyllm>=0.7.4",
    "networkx>=3.6.1",
    "scipy>=1.17.0",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memu"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
markers = [
    "async: marks tests as async",
    "integration: marks tests as integration tests",
    "migration: marks tests as migration tests",
]
